--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # Base path for the application (use "/" for root or "/your-path/" for subdirectory)
-VITE_APP_BASE_PATH=/
+VITE_APP_BASE_PATH=/mediapipe-pose-estimation/
