--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "terser": "^5.44.1",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
